NXT-622: Snapshot tests adopted
To include the added 'dirty' flag on workflow entites.

NXT-622 (Browser function: Save workflow locally)